--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             To Do
           </h4>
         <ul id="list-toDo" class="list-group list-group-flush">
-          <li class="list-group-item">
+          <!-- <li class="list-group-item"> -->
             <!-- <span class="badge badge-primary badge-pill">05/28/2020</span>
             <p class="m-1">Sample task to do</p> -->
-          </li>
+          <!-- </li> -->
         </ul>
           </div>
         </div>
@@ -49,10 +49,10 @@
             In Progress
           </h4>
             <ul id="list-inProgress" class="list-group list-group-flush">
-              <li class="list-group-item">
+              <!-- <li class="list-group-item"> -->
                 <!-- <span class="badge badge-primary badge-pill">05/28/2020</span>
                 <p class="m-1">Sample task in progress</p> -->
-              </li>
+              <!-- </li> -->
             </ul>
           </div>
         </div>
@@ -64,10 +64,10 @@
               In review
             </h4>
           <ul id="list-inReview" class="list-group list-group-flush">
-            <li class="list-group-item">
+            <!-- <li class="list-group-item"> -->
               <!-- <span class="badge badge-primary badge-pill">05/28/20520</span>
               <p class="m-1">Sample task in review</p> -->
-            </li>
+            <!-- </li> -->
           </ul>
         </div>
         </div>
@@ -79,10 +79,10 @@
             done
            </h4>
           <ul id="list-done" class="list-group list-group-flush">
-            <li class="list-group-item">
+            <!-- <li class="list-group-item"> -->
               <!-- <span class="badge badge-primary badge-pill">05/28/2020</span>
               <p class="m-1">Sample task that's done</p> -->
-            </li>
+            <!-- </li> -->
           </ul>
          </div>
         </div>
@@ -132,6 +132,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="./assets/js/script.js"></script>
 </body>
 
