--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-  <!-- add the style sheet here -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Staatliches&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Taskmaster Pro</title>
 </head>
@@ -17,10 +18,14 @@
   <div class="row min-vh-100 no-gutters">
     <header class="col-12 col-lg-3 bg-dark text-light sticky-top d-flex flex-column p-4 p-lg-3">
       <h1 class="text-center">Taskmaster Pro Edition</h1>
-      <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal">Add
-        Task</button>
-      <button id="remove-tasks" class="btn btn-block btn-danger">Delete All Tasks</button>
-      <p class="mt-auto d-none d-lg-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas architecto ipsa
+      <button id="create-task" class="btn btn-block btn-add" data-toggle="modal" data-target="#task-form-modal">
+        <span class="oi oi-plus mr-2"></span>
+        Add Task</button>
+      <button id="remove-tasks" class="btn btn-block btn-delete">
+        <span class="oi oi-trash"></span>
+        Delete All Tasks</button>
+        <span class="oi oi-task display-1 text-center mb-2 d-none d-lg-block mt-auto"></span>
+      <p class="d-none d-lg-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas architecto ipsa
         excepturi aut non
         laudantium sequi fugit officiis optio deleniti asperiores rem eius laborum maxime blanditiis culpa, quis iste?
       </p>
@@ -61,7 +66,7 @@
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
             <h4 class="card-header bg-dark text-light">
-              In review
+              In Review
             </h4>
           <ul id="list-inReview" class="list-group list-group-flush">
             <!-- <li class="list-group-item"> -->
@@ -76,7 +81,7 @@
         <div class="col-12 col-md-6 col-xl-3 mb-3">
          <div class="card">
            <h4 class="card-header bg-dark text-light">
-            done
+            Done
            </h4>
           <ul id="list-done" class="list-group list-group-flush">
             <!-- <li class="list-group-item"> -->
@@ -88,8 +93,9 @@
         </div>
         <!-- done end -->
       </div>
-        <div id="trash">
-          <div class="mt-auto w-100 bg-danger p-3 text-center text-light display-4">
+        <div class="mt-auto overflow-hidden" id="trash">
+          <div class="w-100 p-3 text-center bottom-trash">
+            <span class="oi oi-trash mx-auto mb-4"></span>
             Drop Here to Remove
           </div>
         </div>
@@ -120,8 +126,8 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save Task</button>
+          <button type="button" class="btn btn-close" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-save">Save Task</button>
         </div>
       </div>
     </div>
